--- a/index.html
+++ b/index.html
@@ -1,9 +1,123 @@
-<html>
-    <header><title>Synthesis of Context-Aware Choreographies</title></header>
-    <body>
-        <h1>Automated Synthesis of Context-Aware Choreographies in a Smart City Scenario</h1>
-        <p>This page contains the replication package for the paper Automated Synthesis of Context-Aware Choreographies in a Smart City Scenario</p>
-        <h3>Abstract</h3>
-        <p>Smart cities are one of the most important outcomes of the innovation process in which the proliferation of IoT and the availability of ready-to-use software services are significantly contributing to the digitalization of our life. Within smart cities, modern communication technologies, notably 5G and optical networks, are key-enablers for the realization of a wide set of smart applications based on the reuse and composition of existing services and things distributed in the city. Thanks to their distributed nature, choreographies represent the most powerful and flexible reuse-based composition approach. When dealing with third-party and black-box services, obtaining the distributed coordination logic required to correctly realize the desired choreography is a non-trivial and error-prone development activity. Automatic support is thus needed. Moreover, the dynamic nature of smart cities calls for context-aware choreographies, capable of adapting to changing conditions. This work presents our solution to the choreography realization problem by describing a process for the automated synthesis of context-aware choreographies. The resulting choreographies adapt to the characteristics and conditions of the networking environment. The automated synthesis process is shown at work on a use case of the INCIPICT project.</p>
-    </body>
+<!doctype html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <meta name="description" content="Automated Synthesis of Context-Aware Choreographies in a Smart City Scenario">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>Automated Synthesis of Context-Aware Choreographies</title>
+      <link rel="stylesheet" href="css/w3c_slider.css">
+      <link rel="stylesheet" href="css/railscasts.min.css">
+      <link rel="stylesheet" href="css/scribbler-global.css">
+      <link rel="stylesheet" href="css/scribbler-landing.css">
+      <style>
+         .mySlides {display:none;}
+
+         :root{
+            --primary-color: #404040;
+         }
+      </style>
+   </head>
+   <body>
+      <nav>
+         <div class="logo" style="background: url(./img/logo.png) no-repeat; background-size: contain;"></div>
+         <ul class="menu">
+            <div class="menu__item toggle"><span></span></div>
+            <!-- <li class="menu__item"><a href="doc.html" class="link link--dark"><i class="fas fa-book"></i> Documentation</a></li> -->
+            <li class="menu__item"><a href="https://github.com/sosygroup/synthesis-context-aware-choreographies" class="link link--dark"><i class="fab fa-github"></i> Github</a></li>
+         </ul>
+      </nav>
+
+      <section class="title">
+         <div class="hero">
+            <h1 class="hero__title">Automated Synthesis of Context-Aware Choreographies in a Smart City Scenario</h1>
+            <p class="hero__description">This page contains the replication package for the paper <b>Automated Synthesis of Context-Aware Choreographies in a Smart City Scenario</b>.</p>
+         </div>
+   
+         <div class="w3-content w3-display-container" style="
+            margin: -9rem auto 3rem auto;
+            border-radius: 4px;
+            animation: fadeUp 2s;
+            box-shadow: 0px 12px 36.8px 9.2px rgba(0, 0, 0, 0.1);
+         ">
+         <img class="mySlides" src="./img/ems_overview.png" style="width:100%">
+         <img class="mySlides" src="./img/choroegraphy_diagram_simple.png" style="width:100%">
+         <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+         <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+         </div>
+      </section>
+
+      <section class="abstract">
+         <div class="wrapper">
+            <h3 class="section__title">Abstract</h3>
+            <p>
+               Smart cities are one of the most important outcomes of the innovation process in which the proliferation of IoT and the availability of ready-to-use software services are significantly contributing to the digitalization of our life. Within smart cities, modern communication technologies, notably 5G and optical networks, are key-enablers for the realization of a wide set of smart applications based on the reuse and composition of existing services and things distributed in the city. Thanks to their distributed nature, choreographies represent the most powerful and flexible reuse-based composition approach. When dealing with third-party and black-box services, obtaining the distributed coordination logic required to correctly realize the desired choreography is a non-trivial and error-prone development activity. Automatic support is thus needed. Moreover, the dynamic nature of smart cities calls for context-aware choreographies, capable of adapting to changing conditions. This work presents our solution to the choreography realization problem by describing a process for the automated synthesis of context-aware choreographies. The resulting choreographies adapt to the characteristics and conditions of the networking environment. The automated synthesis process is shown at work on a use case of the INCIPICT project.
+            </p>
+            <!-- <div class="callout">
+               <p>Read our documentation for replication package use</p>
+               <a href="doc.html" class="button--primary">Documentation</a>
+            </div> -->
+         </div>
+      </section>
+
+      <!-- Team -->
+      <section class="contributors">
+         <div class="wrapper">
+            <h3 class="section__title">Contributors</h3>
+            <div class="feature">
+
+               <div class="feature__item">
+                  <div class="team">
+                     <div class="team-img">
+                        <img class="img-responsive" src="./img/GianlucaFilippone.png" alt="">
+                        <div class="team-social">
+                           <a href="mailto:gianluca.filippone@graduate.univaq.it"><i class="fas fa-envelope"></i></a>
+                        </div>
+                     </div>
+                     <div class="team-content">
+                        <h3>Gianluca Filippone</h3>
+                        <span>is <span class="code code--inline">Ph.D. student</span> - University of L’Aquila’s Department of Information Engineering, Computer Science, and Mathemetics. His research focuses on automated composition and coordination of software artifacts, and automated adaptation of distributed systems. Filippone earned a master’s degree in Computer Science at the University of L’Aquila.</span>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="feature__item">
+                  <div class="team">
+                     <div class="team-img">
+                        <img class="img-responsive" src="./img/MarcoAutili.jpg" alt="">
+                        <div class="team-social">
+                           <a target="_blank" href="http://people.disim.univaq.it/marco.autili/"><i class="fas fa-globe"></i></a>
+                           <a href="mailto:marco.autili@univaq.it"><i class="fas fa-envelope"></i></a>
+                        </div>
+                     </div>
+                     <div class="team-content">
+                        <h3>Marco Autili</h3>
+                        <span>is <span class="code code--inline">associate professor</span> - University of L’Aquila’s Department of Information Engineering, Computer Science, and Mathematics. His research focuses on automated synthesis for composing distributed systems, context-oriented mobile software programming, resource-oriented analysis of mobile apps, formal specification and checking of temporal properties. Autili received a PhD in computer science from the University of L’Aquila.</span>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="feature__item">
+                  <div class="team">
+                     <div class="team-img">
+                        <img class="img-responsive" src="./img/MassimoTivoli.jpg" alt="">
+                        <div class="team-social">
+                           <a target="_blank" href="http://people.disim.univaq.it/massimo.tivoli/"><i class="fas fa-globe"></i></a>
+                           <a href="mailto:massimo.tivoli@univaq.it"><i class="fas fa-envelope"></i></a>
+                        </div>
+                     </div>
+                     <div class="team-content">
+                        <h3>Massimo Tivoli</h3>
+                        <span>is <span class="code code--inline">associate professor</span> - Univer- sity of L’Aquila, Department of Information Engineering, Computer Science, and Mathematics. His research focuses on component adaptation and coordination, connector synthesis, software model elicitation, and choreography synthesis. Tivoli received a PhD in computer science from the University of L’Aquila.</span>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <script src="js/jquery-3.3.1.min.js"></script>
+      <script src="js/fontawesome-all.min.js"></script>
+      <script src="js/highlight.min.js"></script>
+      <script src="js/scribbler-index.js"></script>
+      <script src="js/w3c_slider.js"></script>
+   </body>
 </html>
