Added docs page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <div class="logo" style="background: url(./img/logo.png) no-repeat; background-size: contain;"></div>
          <ul class="menu">
             <div class="menu__item toggle"><span></span></div>
-            <!-- <li class="menu__item"><a href="doc.html" class="link link--dark"><i class="fas fa-book"></i> Documentation</a></li> -->
+            <li class="menu__item"><a href="doc.html" class="link link--dark"><i class="fas fa-book"></i> Documentation</a></li>
             <li class="menu__item"><a href="https://github.com/sosygroup/synthesis-context-aware-choreographies" class="link link--dark"><i class="fab fa-github"></i> Github</a></li>
          </ul>
       </nav>
@@ -52,10 +52,10 @@
             <p>
                Smart cities are one of the most important outcomes of the innovation process in which the proliferation of IoT and the availability of ready-to-use software services are significantly contributing to the digitalization of our life. Within smart cities, modern communication technologies, notably 5G and optical networks, are key-enablers for the realization of a wide set of smart applications based on the reuse and composition of existing services and things distributed in the city. Thanks to their distributed nature, choreographies represent the most powerful and flexible reuse-based composition approach. When dealing with third-party and black-box services, obtaining the distributed coordination logic required to correctly realize the desired choreography is a non-trivial and error-prone development activity. Automatic support is thus needed. Moreover, the dynamic nature of smart cities calls for context-aware choreographies, capable of adapting to changing conditions. This work presents our solution to the choreography realization problem by describing a process for the automated synthesis of context-aware choreographies. The resulting choreographies adapt to the characteristics and conditions of the networking environment. The automated synthesis process is shown at work on a use case of the INCIPICT project.
             </p>
-            <!-- <div class="callout">
+            <div class="callout">
                <p>Read our documentation for replication package use</p>
                <a href="doc.html" class="button--primary">Documentation</a>
-            </div> -->
+            </div>
          </div>
       </section>
 
