--- a/doc.html
+++ b/doc.html
@@ -19,7 +19,7 @@
    <body>
       <div class="doc__bg"></div>
       <nav class="header">
-         <h1 class="logo">Automated Synthesis of Context-Aware Choreographies<span class="logo__thin">Doc</span></h1>
+         <h1 class="logo">Automated Synthesis of Context-Aware Choreographies<span class="logo__thin">&nbsp;Doc</span></h1>
          <ul class="menu">
             <div class="menu__item toggle"><span></span></div>
             <li class="menu__item"><a href="https://github.com/sosygroup/synthesis-context-aware-choreographies" class="link link--dark"><i class="fab fa-github"></i> Github</a></li>
